  * dh_installman: Fix non-deterministic behaviour when there
    multiple definitions of the same manpage in a package.
    In compat 13, this is resolved by aborting with an error.
    In older compat levels, dh_installman will deterministically
    pick a canonical version (via sort) along with emitting a
    warning.  Thanks to Colin Watson for reporting the issue.
    (Closes: #943705)

  [ Andrius Merkys ]
  * debhelper.pod: Document chagnes to the gradle third-party
    build system in compat 13.

  [ Translations ]
  * Update German translation (Chris Leick)  (Closes: #943853)


 -- Niels Thykier <niels@thykier.net>  Sun, 17 Nov 2019 12:06:31 +0000

debhelper (12.7.1) unstable; urgency=medium

  [ Colin Watson ]
  * dh_installman: Correctly handle compressed manpages when
    dh_installman uses man-recode.  (Closes: #943376)

 -- Niels Thykier <niels@thykier.net>  Sat, 26 Oct 2019 06:42:04 +0000

debhelper (12.7) unstable; urgency=medium

  [ Niels Thykier ]:
  * dh_installman: Avoid error message when man-db is not installed
    (only occurs in debhelper's own build as man-db is a mandatory
    dependency).
  * dh_installman: Use man-recode(1) when available to massively
    speed up re-encoding performance for any package with a non-
    trivial amount of manpages.  Thanks to Robert Luberda for
    reporting the issue and Colin Watson for writing man-recode
    (Closes: #933576)
  * debhelper.pod: Actively discourage compat 11 as it has an
    issue that causes services not to start correctly in all cases
    (e.g. install, remove-but-not-purge, install again), which
    cannot be fixed.
  * dh_auto_*: Support a new --reload-all-buildenv-variables
    option for resetting the cache (of e.g. dpkg-buildflags).
    This is needed by e.g. parted which does two builds with
    different CFLAGS.
  * dh_makeshlibs: Suggest/Document that --no-add-udeb can be
    relevant for some udebs where the shared library for the udeb