@@ -14,6 +14,16 @@ debhelper (12.7.2) UNRELEASED; urgency=medium
     pick a canonical version (via sort) along with emitting a
     warning.  Thanks to Colin Watson for reporting the issue.
     (Closes: #943705)
+  * dh_auto_*: In compat 13+, reset HOME and XDG_* environment
+    variables.  Some are cleared and some are set to a writable
+    directory that persist until dh_clean.  Thanks to
+    Simon McVittie for reporting the issue.
+    (Closes: #942111)
+  * dh_auto_*:  As a side-effect of the above, debhelper in compat
+    13+ no longer trips a FTBFS in sbuild for meson packages when
+    ccache is installed but not configured/used explicitly.
+    Thanks to Simon McVittie for reporting the issue.
+    (Closes: #933799)
 
   [ Andrius Merkys ]
   * debhelper.pod: Document chagnes to the gradle third-party
